Application without JUnit